Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10841

ASSERTION( lock->l_granted_mode != lock->l_req_mode ) failed: LBUG comm: ldlm_bl_06

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

       
      |[249938.280747] LustreError: 2497:0:(ldlm_extent.c:785:ldlm_process_extent_lock()) ASSERTION( lock->l_granted_mode != lock->l_req_mode ) failed:|
      |[249938.332556] LustreError: 2497:0:(ldlm_extent.c:785:ldlm_process_extent_lock()) LBUG|
      |[249938.341030] Pid: 2497, comm: ldlm_bl_06|
      |[249938.345652]|
      |Call Trace:|
      |[249938.351206] [<ffffffffa0e6be40>] ? ldlm_process_extent_lock+0x0/0x5b0 [ptlrpc]|
      |[249938.359358] [<ffffffffa0aa2853>] libcfs_debug_dumpstack+0x53/0x80 [libcfs]|
      |[249938.367172] [<ffffffffa0aa2f95>] lbug_with_loc+0x45/0xc0 [libcfs]|
      |[249938.374255] [<ffffffffa0e6c342>] ldlm_process_extent_lock+0x502/0x5b0 [ptlrpc]|
      |[249938.382484] [<ffffffffa0e6be40>] ? ldlm_process_extent_lock+0x0/0x5b0 [ptlrpc]|
      |[249938.390728] [<ffffffffa0e54ceb>] ldlm_reprocess_queue+0x13b/0x2a0 [ptlrpc]|
      |[249938.398629] [<ffffffffa0e559bb>] __ldlm_reprocess_all+0x14b/0x3a0 [ptlrpc]|
      |[249938.406540] [<ffffffffa0e55e20>] ldlm_reprocess_res+0x20/0x30 [ptlrpc]|
      |[249938.414099] [<ffffffffa0ab736d>] cfs_hash_for_each_relax+0x1dd/0x470 [libcfs]|
      |[249938.422297] [<ffffffffa0e55e00>] ? ldlm_reprocess_res+0x0/0x30 [ptlrpc]|
      |[249938.430002] [<ffffffffa0e55e00>] ? ldlm_reprocess_res+0x0/0x30 [ptlrpc]|
      |[249938.437689] [<ffffffffa0ab9d75>] cfs_hash_for_each_nolock+0x75/0x1c0 [libcfs]|
      |[249938.445940] [<ffffffffa0e564ec>] ldlm_reprocess_recovery_done+0x3c/0x110 [ptlrpc]|
      |[249938.454557] [<ffffffffa0e5721c>] ldlm_export_cancel_locks+0x11c/0x130 [ptlrpc]|
      |[249938.462943] [<ffffffffa0e80a30>] ldlm_bl_thread_main+0x4a0/0x8c0 [ptlrpc]|
      |[249938.470888] [<ffffffff81639a18>] ? __schedule+0x2d8/0x900|
      |[249938.477476] [<ffffffffa0e80590>] ? ldlm_bl_thread_main+0x0/0x8c0 [ptlrpc]|
      |[249938.485442] [<ffffffff810a5b8f>] kthread+0xcf/0xe0|
      |[249938.491418] [<ffffffff810a5ac0>] ? kthread+0x0/0xe0|
      |[249938.497490] [<ffffffff81644f98>] ret_from_fork+0x58/0x90|
      |[249938.504020] [<ffffffff810a5ac0>] ? kthread+0x0/0xe0|
      |[249938.510107]|
      |[249938.512729] Kernel panic - not syncing: LBUG|
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: